# AGNBoost

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
agnboost/: __init__.py  allowed_bands.json  config.py  dataset.py  features.py  model.py  plots.py  utils.py
agnboost/modeling/: predict.py  train.py
api/: index.html
data/: cigale_mock_small.csv
docs/: api.md  getting-started.md  index.html  index.md  mkdocs.yml
docs/docs/: index.md
docs/getting-started/: index.html
docs/tutorials/: CustomFeatures+Targets.ipynb  basic-usage.ipynb  basic-usage_old.ipynb  custom_bands.ipynb  tuning+training.ipynb
getting-started/: index.html
models/: 2025_06_01-AM12_00_22_agn.fracAGN_model.pkl  2025_06_01-AM12_05_21_agn.fracAGN_model.pkl
notebooks/: CustomFeatures+Targets.ipynb  custom_bands.ipynb  data-transformations.ipynb  main.ipynb  tuning+training.ipynb
search/: search_index.json
tutorials/: basic-useage.ipynb
tutorials/CustomFeatures+Targets/: index.html
tutorials/basic-usage/: index.html
tutorials/basic-usage_old/: index.html
tutorials/custom_bands/: index.html
tutorials/tuning+training/: index.html
