[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "agnboost"
version = "0.0.1"
description = "AGNBoost utilizes XGBoostLSS models to estimate fagn, the fraction of 3-30 micron light attributable to an AGN, and photometric redshift. It is trained on log10(N) = 7 mock galaxies from CIGALE, and uses 7 NIRCam+MIRI bands, 55 derived colors, and the squares of those derived colors as input features. AGNBoost provides a computationally fast and flexible alternative to color selection and SED fitting."
authors = [
  { name = "Kurt Hamblin", email = "kurt.hamblin@ku.edu" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["astronomy", "machine-learning", "agn", "photometric-redshift", "redshift", "xgboost", "jwst"]

dependencies = [
    "xgboostlss>=0.4.0",
    "xgboost>=2.0.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.1.0",
    "seaborn>=0.13.0"
    "astropy>=5.0.0",
    "matplotlib>=3.5.0",
    "scipy>=1.9.0",
    "tqdm>=4.64.0",
    "loguru>=0.7.0",
    "optuna>=3.5.0"
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-git-committers-plugin-2>=1.2.0",
]

gpu = [
    "xgboost[gpu]>=2.0.0",
]

all = [
    "agnboost[docs,gpu]",
]

[project.urls]
Homepage = "https://github.com/hamblin-ku/AGNBoost"
Documentation = "https://hamblin-ku.github.io/AGNBoost/"

[project.scripts]
agnboost = "agnboost.cli:main"

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]


